tests/baselines/reference/unusedNamespaceInNamespace.errors.txt
tests/cases/compiler/unusedNamespaceInNamespace.ts(2,15): error TS6133: 'B' is declared but never used.


==== tests/cases/compiler/unusedNamespaceInNamespace.ts (1 errors) ====
    namespace A {
        namespace B { }
                  ~
!!! error TS6133: 'B' is declared but never used.
        export namespace C {}
    }